# pysolvr-client

./: README.md  pyproject.toml
.github/workflows/: publish.yml
pysolvr_client/: __init__.py  api.py  cell_template.py  display.py  drive.py
pysolvr_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pysolvr_client/cells/: __init__.py  account.py  header.py  setup.py  subscription.py  support.py  usage.py
tests/: test_cell_template.py  test_client.py
