[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysolvr-client"
version = "0.8.10"
description = "Shared notebook client library for pysolvr businesses"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/dAIvdMercer/pysolvr-client"
